fixed image stretching in some pages

--- a/src/Styles/Panel2.css
+++ b/src/Styles/Panel2.css
@@ -12,7 +12,7 @@
 .panel2-image {
     width: 100%;
     height: 100%;
-    object-fit: fill;
+    object-fit: cover;
     padding-top: 10px;
 }
 .panel2-right {
