--- a/src/Styles/Panel3.css
+++ b/src/Styles/Panel3.css
@@ -11,7 +11,7 @@
 .panel3-image {
     width: 100%;
     height: 100%;
-    object-fit: fill;
+    object-fit: cover;
 }
 .panel3-left {
     display: flex;
