--- a/src/Styles/Panel4.css
+++ b/src/Styles/Panel4.css
@@ -48,6 +48,8 @@
 .panel4-image {
     height: 100%;
     width: 100%;
+    object-fit: cover;
+
 }
 
 #panel4-button {
